# hiob-core

./: BUILD_STATUS.md  README.md  pyproject.toml  verify_build.sh
hiob_core/: __init__.py  engine_cost_sim.py  llm_runtime.py  model_providers.py
hiob_core/platform/: __init__.py  brand_kit.py  client.py  notify.py  pronunciation.py  role_artifacts.py  storage.py  team.py
tests/: test_bf5_1_engine_cost_sim.py  test_bfa5_cost_line_item.py  test_model_providers.py  test_platform_reexports.py
