[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiob-core"
version = "0.1.0"
description = "HIOB polyrepo planet · hiob-core"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "hiob-platform @ git+https://github.com/ksurahan-source/hiob-platform.git",
    "anthropic",
    "httpx",
    "openai",
    "supabase",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["hiob_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
