[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiob-core"
version = "0.1.0"
description = "HIOB 공유 런타임 — LLM 런타임·모델 프로바이더·platform 헬퍼. 전 행성이 depend하는 published 패키지(폴리레포 Phase 0.2)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "anthropic",
    "httpx",
    "openai",
    "supabase",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hiob_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
