[project]
name = "hiob-core"
version = "0.1.0"
description = "HIOB 공유 런타임 — LLM 런타임·모델 프로바이더·platform 헬퍼. 전 행성이 depend하는 published 패키지(폴리레포 substrate)."
requires-python = ">=3.10"
license = { text = "MIT" }
# substrate = plain 이름(소비자 root sources가 git 해소). hiob-platform은 substrate 동급.
dependencies = [
    "hiob-platform @ git+https://github.com/ksurahan-source/hiob-platform.git@main",
    "httpx",
    "openai",
    "supabase",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hiob_core*"]
exclude = ["*.tests", "*.tests.*"]
